Funciona el registro también